Выполнить домашнюю работу

--- a/OOP_Python/lesson_1/Untitled.ipynb
+++ b/OOP_Python/lesson_1/Untitled.ipynb
@@ -263,7 +263,7 @@
    ],
    "source": [
     "li = re.findall(\"\\w+@\\w+\\.\\w+\", text)\n",
-    "li "
+    "li"
    ]
   },
   {
@@ -1027,6 +1027,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "71e32452",
+   "metadata": {},
+   "source": [
+    "возвращает строку, полученную путем замены крайнего левого неперекрывающегося вхождения шаблона"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "b505e9d9",
@@ -1151,6 +1159,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "00493b85",
+   "metadata": {},
+   "source": [
+    " компилирует шаблон регулярного выражения pattern в объект регулярного выражения, который может быть использован для поиска совпадений с использованием методов"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "352f8b79",
@@ -1177,7 +1193,7 @@
     }
    ],
    "source": [
-    "pattern_string = \"\\d{1,2}\\-[йя]\"\n",
+    "pattern_string = \"\\d{1,2}\\-[йя]\" \n",
     "print(re.findall(pattern_string, text1))"
    ]
   },
@@ -1331,6 +1347,366 @@
    "source": [
     "re.split"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dccfd995",
+   "metadata": {},
+   "source": [
+    "# Домашняя работа №1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "830fbc4f",
+   "metadata": {},
+   "source": [
+    "### 1. Получите текст из файла."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9f24b9d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'В этой статье собраны самые интересные, популярные и полезные туристические сайты. А дальше анализ сайта и его удобство вы оцените для себя сами.\\n 1) travel.mail.ru/travel. Проект под названием Путешествия @ Mail.ru был создан для того, чтобы помочь путешественникам найти лучшие места для отдыха, а продавцам туров дать возможность объявить о своих привлекательных ценовых предложениях. Затратив минимум времени, посетители портала могут получить всю необходимую информацию по турам и странам.\\n 2) travel.mail.ru/travel2. Один из самых известных сайтов среди любителей далеких путешествий. Здесь постоянно обновляются новости, можно купить билеты и туры, а также найти горящие путевки. Удобство сайта заключается еще в том, что имеется табло аэропортов, информация о безвизовых странах, о выставках, цены на авиабилеты и фоторепортажи.\\n 3) votpusk.ru/main. Это популярный портал, выполненный в виде интернет-магазина туристических услуг. Описание стран, отелей и курортов, отзывы туристов, обзоры, новости и другая полезная информация. Работает портал с 1999 года.\\n 4) 3totravel.ru. Ресурс посвящен любознательным особам, кто желает побольше узнать информации об удивительных странах. Здесь можно не только прочитать свежие новости, но и самим стать авторами статей о приключениях за границей. Кроме описания курортов и отелей, на сайте есть гастрономическая страничка, где рассказывается о блюдах с разных уголков мира.\\n 5) geospot.ru/about. На этом ресурсе есть информация о разных странах, а также детальное описание и тонкости получения виз. Для тех, кто не желает тратить время на собирание бумажек для посольств, на сайте есть список стран, куда можно отправиться сейчас же, безо всяких виз. Путешественники оставляют не только фотоотчеты, а еще видеозаписи из поездок.'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filename = \"text_dz.txt\"\n",
+    "with open(filename, encoding = 'utf-8') as file:\n",
+    "    text_dz = file.read()\n",
+    "text_dz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "853d5722",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'В этой статье собраны самые интересные, популярные и полезные туристические сайты. А дальше анализ сайта и его удобство вы оцените для себя сами.\\n 1) travel.mail.ru/travel. Проект под названием Путешествия @ Mail.ru был создан для того, чтобы помочь путешественникам найти лучшие места для отдыха, а продавцам туров дать возможность объявить о своих привлекательных ценовых предложениях. Затратив минимум времени, посетители портала могут получить всю необходимую информацию по турам и странам.\\n 2) travel.mail.ru/travel2. Один из самых известных сайтов среди любителей далеких путешествий. Здесь постоянно обновляются новости, можно купить билеты и туры, а также найти горящие путевки. Удобство сайта заключается еще в том, что имеется табло аэропортов, информация о безвизовых странах, о выставках, цены на авиабилеты и фоторепортажи.\\n 3) votpusk.ru/main. Это популярный портал, выполненный в виде интернет-магазина туристических услуг. Описание стран, отелей и курортов, отзывы туристов, обзоры, новости и другая полезная информация. Работает портал с 1999 года.\\n 4) 3totravel.ru. Ресурс посвящен любознательным особам, кто желает побольше узнать информации об удивительных странах. Здесь можно не только прочитать свежие новости, но и самим стать авторами статей о приключениях за границей. Кроме описания курортов и отелей, на сайте есть гастрономическая страничка, где рассказывается о блюдах с разных уголков мира.\\n 5) geospot.ru/about. На этом ресурсе есть информация о разных странах, а также детальное описание и тонкости получения виз. Для тех, кто не желает тратить время на собирание бумажек для посольств, на сайте есть список стран, куда можно отправиться сейчас же, безо всяких виз. Путешественники оставляют не только фотоотчеты, а еще видеозаписи из поездок.'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_dz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2628c86",
+   "metadata": {},
+   "source": [
+    "### 2. Найдите слова, состоящие из 4 букв и более. Выведите на экран 10 самых часто используемых слов."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a7853f84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['этой', 'статье', 'собраны', 'самые', 'интересные', 'популярные', 'полезные', 'туристические', 'сайты', 'дальше', 'анализ', 'сайта', 'удобство', 'оцените', 'себя', 'сами', 'Проект', 'названием', 'Путешествия', 'создан', 'того', 'чтобы', 'помочь', 'путешественникам', 'найти', 'лучшие', 'места', 'отдыха', 'продавцам', 'туров', 'дать', 'возможность', 'объявить', 'своих', 'привлекательных', 'ценовых', 'предложениях', 'Затратив', 'минимум', 'времени', 'посетители', 'портала', 'могут', 'получить', 'необходимую', 'информацию', 'турам', 'странам', 'Один', 'самых', 'известных', 'сайтов', 'среди', 'любителей', 'далеких', 'путешествий', 'Здесь', 'постоянно', 'обновляются', 'новости', 'можно', 'купить', 'билеты', 'туры', 'также', 'найти', 'горящие', 'путевки', 'Удобство', 'сайта', 'заключается', 'имеется', 'табло', 'аэропортов', 'информация', 'безвизовых', 'странах', 'выставках', 'цены', 'авиабилеты', 'фоторепортажи', 'популярный', 'портал', 'выполненный', 'виде', 'интернет', 'магазина', 'туристических', 'услуг', 'Описание', 'стран', 'отелей', 'курортов', 'отзывы', 'туристов', 'обзоры', 'новости', 'другая', 'полезная', 'информация', 'Работает', 'портал', 'года', 'Ресурс', 'посвящен', 'любознательным', 'особам', 'желает', 'побольше', 'узнать', 'информации', 'удивительных', 'странах', 'Здесь', 'можно', 'только', 'прочитать', 'свежие', 'новости', 'самим', 'стать', 'авторами', 'статей', 'приключениях', 'границей', 'Кроме', 'описания', 'курортов', 'отелей', 'сайте', 'есть', 'гастрономическая', 'страничка', 'рассказывается', 'блюдах', 'разных', 'уголков', 'мира', 'этом', 'ресурсе', 'есть', 'информация', 'разных', 'странах', 'также', 'детальное', 'описание', 'тонкости', 'получения', 'желает', 'тратить', 'время', 'собирание', 'бумажек', 'посольств', 'сайте', 'есть', 'список', 'стран', 'куда', 'можно', 'отправиться', 'сейчас', 'безо', 'всяких', 'Путешественники', 'оставляют', 'только', 'фотоотчеты', 'видеозаписи', 'поездок']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(\"[А-я]{4,}\")\n",
+    "t = pattern.findall(text_dz)\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "7b405442",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "8\n",
+      "2\n",
+      "12\n",
+      "12\n",
+      "4\n",
+      "[5, 8, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list_1 = [2, 5, 8, 2, 12, 12, 4]\n",
+    "my_list_2 = [2, 7, 12, 3]\n",
+    "my_list_3 = []\n",
+    "for i in my_list_1:\n",
+    "    print(i)\n",
+    "    if i not in my_list_2:\n",
+    "        my_list_3.append(i)\n",
+    "print(my_list_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d20a400e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_words = {}\n",
+    "\n",
+    "for i in t:\n",
+    "    if i not in count_words:\n",
+    "        count_words[i] = 1\n",
+    "    else:\n",
+    "        count_words[i] = count_words[i] + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8fd8aceb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'этой': 1,\n",
+       " 'статье': 1,\n",
+       " 'собраны': 1,\n",
+       " 'самые': 1,\n",
+       " 'интересные': 1,\n",
+       " 'популярные': 1,\n",
+       " 'полезные': 1,\n",
+       " 'туристические': 1,\n",
+       " 'сайты': 1,\n",
+       " 'дальше': 1,\n",
+       " 'анализ': 1,\n",
+       " 'сайта': 2,\n",
+       " 'удобство': 1,\n",
+       " 'оцените': 1,\n",
+       " 'себя': 1,\n",
+       " 'сами': 1,\n",
+       " 'Проект': 1,\n",
+       " 'названием': 1,\n",
+       " 'Путешествия': 1,\n",
+       " 'создан': 1,\n",
+       " 'того': 1,\n",
+       " 'чтобы': 1,\n",
+       " 'помочь': 1,\n",
+       " 'путешественникам': 1,\n",
+       " 'найти': 2,\n",
+       " 'лучшие': 1,\n",
+       " 'места': 1,\n",
+       " 'отдыха': 1,\n",
+       " 'продавцам': 1,\n",
+       " 'туров': 1,\n",
+       " 'дать': 1,\n",
+       " 'возможность': 1,\n",
+       " 'объявить': 1,\n",
+       " 'своих': 1,\n",
+       " 'привлекательных': 1,\n",
+       " 'ценовых': 1,\n",
+       " 'предложениях': 1,\n",
+       " 'Затратив': 1,\n",
+       " 'минимум': 1,\n",
+       " 'времени': 1,\n",
+       " 'посетители': 1,\n",
+       " 'портала': 1,\n",
+       " 'могут': 1,\n",
+       " 'получить': 1,\n",
+       " 'необходимую': 1,\n",
+       " 'информацию': 1,\n",
+       " 'турам': 1,\n",
+       " 'странам': 1,\n",
+       " 'Один': 1,\n",
+       " 'самых': 1,\n",
+       " 'известных': 1,\n",
+       " 'сайтов': 1,\n",
+       " 'среди': 1,\n",
+       " 'любителей': 1,\n",
+       " 'далеких': 1,\n",
+       " 'путешествий': 1,\n",
+       " 'Здесь': 2,\n",
+       " 'постоянно': 1,\n",
+       " 'обновляются': 1,\n",
+       " 'новости': 3,\n",
+       " 'можно': 3,\n",
+       " 'купить': 1,\n",
+       " 'билеты': 1,\n",
+       " 'туры': 1,\n",
+       " 'также': 2,\n",
+       " 'горящие': 1,\n",
+       " 'путевки': 1,\n",
+       " 'Удобство': 1,\n",
+       " 'заключается': 1,\n",
+       " 'имеется': 1,\n",
+       " 'табло': 1,\n",
+       " 'аэропортов': 1,\n",
+       " 'информация': 3,\n",
+       " 'безвизовых': 1,\n",
+       " 'странах': 3,\n",
+       " 'выставках': 1,\n",
+       " 'цены': 1,\n",
+       " 'авиабилеты': 1,\n",
+       " 'фоторепортажи': 1,\n",
+       " 'популярный': 1,\n",
+       " 'портал': 2,\n",
+       " 'выполненный': 1,\n",
+       " 'виде': 1,\n",
+       " 'интернет': 1,\n",
+       " 'магазина': 1,\n",
+       " 'туристических': 1,\n",
+       " 'услуг': 1,\n",
+       " 'Описание': 1,\n",
+       " 'стран': 2,\n",
+       " 'отелей': 2,\n",
+       " 'курортов': 2,\n",
+       " 'отзывы': 1,\n",
+       " 'туристов': 1,\n",
+       " 'обзоры': 1,\n",
+       " 'другая': 1,\n",
+       " 'полезная': 1,\n",
+       " 'Работает': 1,\n",
+       " 'года': 1,\n",
+       " 'Ресурс': 1,\n",
+       " 'посвящен': 1,\n",
+       " 'любознательным': 1,\n",
+       " 'особам': 1,\n",
+       " 'желает': 2,\n",
+       " 'побольше': 1,\n",
+       " 'узнать': 1,\n",
+       " 'информации': 1,\n",
+       " 'удивительных': 1,\n",
+       " 'только': 2,\n",
+       " 'прочитать': 1,\n",
+       " 'свежие': 1,\n",
+       " 'самим': 1,\n",
+       " 'стать': 1,\n",
+       " 'авторами': 1,\n",
+       " 'статей': 1,\n",
+       " 'приключениях': 1,\n",
+       " 'границей': 1,\n",
+       " 'Кроме': 1,\n",
+       " 'описания': 1,\n",
+       " 'сайте': 2,\n",
+       " 'есть': 3,\n",
+       " 'гастрономическая': 1,\n",
+       " 'страничка': 1,\n",
+       " 'рассказывается': 1,\n",
+       " 'блюдах': 1,\n",
+       " 'разных': 2,\n",
+       " 'уголков': 1,\n",
+       " 'мира': 1,\n",
+       " 'этом': 1,\n",
+       " 'ресурсе': 1,\n",
+       " 'детальное': 1,\n",
+       " 'описание': 1,\n",
+       " 'тонкости': 1,\n",
+       " 'получения': 1,\n",
+       " 'тратить': 1,\n",
+       " 'время': 1,\n",
+       " 'собирание': 1,\n",
+       " 'бумажек': 1,\n",
+       " 'посольств': 1,\n",
+       " 'список': 1,\n",
+       " 'куда': 1,\n",
+       " 'отправиться': 1,\n",
+       " 'сейчас': 1,\n",
+       " 'безо': 1,\n",
+       " 'всяких': 1,\n",
+       " 'Путешественники': 1,\n",
+       " 'оставляют': 1,\n",
+       " 'фотоотчеты': 1,\n",
+       " 'видеозаписи': 1,\n",
+       " 'поездок': 1}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f83cfc27",
+   "metadata": {},
+   "source": [
+    "### 3.  Отберите все ссылки"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "932acb6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['travel.mail.ru/travel', 'Mail.ru', 'travel.mail.ru/travel2', 'votpusk.ru/main', '3totravel.ru', 'geospot.ru/about']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(\"[A-z\\.0-9]+\\.[A-z/0-9]+\")\n",
+    "print(re.findall(pattern, text_dz))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "6e3b8011",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1999']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = re.compile(\"[0-9]{4}\")\n",
+    "print(re.findall(pattern, text_dz))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e77d837c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
